test/files/neg/t6162-inheritance.check
t6162-inheritance.scala:6: warning: inheritance from class Foo in package t6126 is deprecated: `Foo` will be made final in a future version.
class SubFoo extends Foo
                     ^
t6162-inheritance.scala:11: warning: inheritance from trait T in package t6126 is deprecated
object SubT extends T
                    ^
t6162-inheritance.scala:17: warning: inheritance from trait S in package t6126 is deprecated
  new S {
      ^
t6162-inheritance.scala:6: warning: inheritance from class Foo in package t6126 is deprecated: `Foo` will be made final in a future version.
class SubFoo extends Foo
             ^
t6162-inheritance.scala:11: warning: inheritance from trait T in package t6126 is deprecated
object SubT extends T
            ^
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
